Fixed editUser page

--- a/frontend/src/components/UI/button/Button.module.css
+++ b/frontend/src/components/UI/button/Button.module.css
@@ -12,6 +12,7 @@
 	border: 1px solid #E8E8E8;
 	box-sizing: border-box;
 	border-radius: 5px;
+	text-align: center;
 }
 
 .btn:hover{
@@ -20,4 +21,8 @@
 
 .btn:disabled{
     background: #8C68FF;
+}
+
+.input{
+    display:none;
 }
