--- a/frontend/src/components/UI/modal/Modal.module.css
+++ b/frontend/src/components/UI/modal/Modal.module.css
@@ -9,6 +9,8 @@
     background: rgba(0,0,0, 0.3);
     display: none;
     overflow: auto;
+    z-index: 1000;
+    align-content: center;
 }
 
 .modalContent {
