--- a/frontend/src/components/UI/menu/Menu.module.css
+++ b/frontend/src/components/UI/menu/Menu.module.css
@@ -10,6 +10,10 @@
     margin-bottom: 19px;
     padding: 11px;
     border-radius: 10px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #525252;
 }
 
 .menu_item:hover{
@@ -20,20 +24,14 @@
     background-color:#ffffff;
 }
 
-.menu_item_link{
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 23px;
-    color: #525252;
-}
-
-.menu_item_link:hover{
+.menu_item:hover{
     text-decoration: none;
     background-color:#ffffff;
     color:#525252;
+    cursor: pointer;
 }
 
-.menu_item_link:active{
+.menu_item:active{
     text-decoration: none;
     background-color:#ffffff;
     color:#525252;
