--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -22,6 +22,12 @@ body{
 button{
 	display: block;
 	border-width: 0;
+	outline:0 none ;
+	cursor: pointer;
+}
+
+a, a:visited, a:focus, a:active, a:hover, button:active, button:focus{
+    outline:0 none !important;
 }
 
 p{
