--- a/frontend/src/components/UI/search/Search.module.css
+++ b/frontend/src/components/UI/search/Search.module.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+.search_input:focused{
+    outline: none;
+}
+
 .search_btn{
     display: inline;
     width: 19%;
