--- a/frontend/src/components/UI/table/Table.css
+++ b/frontend/src/components/UI/table/Table.css
@@ -29,8 +29,8 @@
 }
 
 .remove_btn{
-    display: inline;
-    margin-left: 50%;
+    display: inline-block;
+    margin-left: 10px;
     opacity: 0;
     width: 20px;
     height: 20px;
@@ -41,6 +41,23 @@
     border: 0px;
 }
 
-.table_row:hover .remove_btn {
+.table_row:hover .remove_btn{
     opacity: 1;
+}
+
+.table_row:hover  .edit_btn{
+    opacity: 1;
+}
+
+.edit_btn{
+    display: inline;
+    margin-left: 30%;
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+    margin-top: 5px;
+    background: url("../../../img/edit_btn.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 0px;
 }
